# xmplaylist

./: .env.example  .gitignore  README.md  docker-compose.yaml  exchange_code.py  main.py  mise.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  run-setup.sh
.github/workflows/: docker-build.yml
kubernetes/: Deployment.yaml
src/backend/: .cache  Dockerfile  main.py  pyproject.toml
src/backend/src/backend/: auth.py  config.py  main.py
src/backend/src/backend/api/: __init__.py  routes.py
src/backend/src/backend/core/: __init__.py  interfaces.py
src/backend/src/backend/models/: __init__.py  track.py
src/backend/src/backend/providers/: __init__.py  spotify.py  xm_radio.py
src/backend/src/backend/services/: __init__.py  sync_service.py
src/backend/src/tests/: __init__.py  test_quick.py  test_spotify.py
src/frontend/: Dockerfile  main.py  pyproject.toml
src/frontend/src/frontend/: __init__.py  main.py
src/frontend/src/frontend/templates/: index.html
