[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "spotipy>=2.24.0",
  "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
